@@ -23,6 +23,8 @@ Bug fixes
 Improvements
 ------------
 
+* [`2463 <https://cta-redmine.irap.omp.eu/issues/2463>`_] -
+  Enhance ``GModelSpatialRadialProfileGauss`` class
 * [`2458 <https://cta-redmine.irap.omp.eu/issues/2458>`_] -
   Increase integration precision for CTA diffuse model response
 * [`2422 <https://cta-redmine.irap.omp.eu/issues/2422>`_] -
