@@ -1,7 +1,7 @@
 /***************************************************************************
  *    GModelSpatialRadialProfileGauss.i - Gaussian radial profile class    *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2016 by Juergen Knoedlseder                              *
+ *  copyright (C) 2016-2018 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
